// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bar.js-flow 1`] = `
"// @flow
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
"
`;

exports[`foo.js-flow 1`] = `
"// @flow
require('./bar');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
require(\\"./bar\\");
"
`;
